# assimp

./: CMakeLists.txt  premake5.lua
code/: CMakeLists.txt
code/AssetLib/FBX/: FBXConverter.cpp
code/AssetLib/STEPParser/: STEPFileEncoding.cpp
code/Common/: BaseImporter.cpp  FileSystemFilter.h
contrib/zlib/: gzguts.h  zutil.c  zutil.h
include/assimp/: config.h  revision.h
